saves/test/demo_full_20240802_193545/shift4/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp shift4_tb.v shift4.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
shift4_tb.v:178: $finish called at 650000 (1ps)

iverilog cmd 2 error:

